--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,288 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
+}
+
+.navbar-brand, .nav-link, .subtitle{
+  font-weight: 800;
+  font-size: 1.2rem;
+  color: #66686b;
+}
+
+.logo{
+  vertical-align: middle !important;
+  margin: 0 10px 0 0;
+}
+
+.logo:hover {
+  box-shadow: 5px 5px 5px black;
+}
+
+.nav-link {
+  font-size: 15px;
+}
+
+.link:hover {
+  color: black;
+}
+
+
+.navbar-toggler:hover {
+  box-shadow: 5px 5px 5px black;
+}
+
+.meContainer {
+  max-width: 100%;
+  background-color: #282727;
+  padding-top: 4rem;
+}
+
+.meContainer:hover{
+  padding: 3rem;
+  padding-top: 5rem;
+  transition: 5s;
+}
+
+.me {
+  width: 100%;
+  border-radius: 10px;
+}
+
+
+.aboutMe, .project, .services{
+  background-color: #c2c8cc;
+  padding: 30px;
+}
+
+.subtitle {
+  font-weight: 700;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.photo {
+  width: 100%;
+  height: 100%;
+  border-radius: 5%;
+}
+
+.photoAboutMe:hover {
+  transform: scaleX(-1);
+  transition: 2s;
+}
+
+
+img {
+  border-radius: 5%;
+}
+
+.description {
+  color: black;
+  font-size: 15px;
+  line-height: 2.5rem;
+}
+
+.center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.color {
+  color: black;
+  font-size: 1.2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.project {
+  background-color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.topic{
+  color: #b2ac35;
+}
+
+.content {
+  color: white;
+  font-size: 12px;
+}
+
+.overlayContainer {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.slink {
+  text-decoration: none;
+  color: white;
+  font-size: 15px;
+  font-weight: 800;
+}
+
+.slink:hover {
+  color: #b2ac35;
+}
+
+.overlay {
+  position: absolute;
+  border-radius: 5%;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #282727;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.overlayContainer:hover .overlay {
+  opacity: 1;
+}
+
+.text{
+  padding: 2rem;
+}
+
+.contact {
+  background-color: white;
+  margin: 0;
+  padding: 0;
+}
+
+.contact .subtitle {
+  color: black;
+  padding: 2rem 0 0 0;
+  margin: 0;
+}
+
+.contact .description {
+  text-align: center;
+}
+
+.contact ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.contact li {
+  margin: 0 10px;
+}
+
+.telList {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.tel {
+  color: black;
+  font-size: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.telLink {
+  text-decoration: none;
+}
+
+.fa:hover {
+ box-shadow: 5px 5px 5px black;
+ border-radius: 10%;
+}
+
+.fa-phone {
+  color: black;
+}
+
+.tel:hover {
+  text-shadow: 5px 5px 5px black;
+}
+
+.fa-envelope {
+  color: #282727;
+}
+
+.fa-whatsapp {
+  color: #5fec6a;
+  padding: 5px;
+  border-radius: 50%;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.fa-linkedin-square {
+  color: #0b66c2;
+  border-radius: 10%;
+}
+
+.fa-telegram {
+  color: #44baf9;
+  padding: 5px;
+  border-radius: 10%;
+}
+
+.xIcon {
+  border-radius: 10%;
+  width: 17px;
+  height: auto;
+}
+
+.xIcon:hover {
+  box-shadow: 5px 5px 5px black;
+}
+
+.go-top {
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  text-indent: 101%;
+  white-space: nowrap;
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: black;
+  border-radius: 3px;
+  color: #fff;
+  border: 0;
+}
+
+.go-top:before {
+  width: 13px;
+  height: 13px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  content: '';
+  border-style: solid;
+  border-color: #fff;
+  border-width: 1px 1px 0 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -3px 0 0 -6px;
+}
+
+.go-top:hover {
+  background: #737577;
+}
+
+
+@media (max-width: 576px) {
+  .content, .topic, .slink {
+    font-size: 8px;
+    margin: 10px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (max-width: 327px) {
+  .content, .topic, .slink {
+    font-size: 6px;
+    margin: 10px;
   }
 }
